# GTK4-Autotools

./: .gitignore  Makefile.am  README.md  configure.ac  configure~
src/: main.c
