#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
AC_PREREQ([2.71])
AC_INIT([gtkDemoApp], [0.1], [null@dev.null])
AC_CONFIG_SRCDIR([src/])
AC_CONFIG_AUX_DIR([build-aux])

# Init automake
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
#PKG_PROG_PKG_CONFIG([0.29])
PKG_CHECK_MODULES([GTK4], [gtk4])
# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.c

# Checks for library functions.

#AC_CONFIG_FILES
AC_CONFIG_FILES([Makefile])

AC_OUTPUT
