# ================================================
# Basic properties
# ================================================
AC_PREREQ([2.71])
AC_INIT([gtkDemoApp], [0.1], [null@dev.null])
AC_CONFIG_SRCDIR([src/])
AC_CONFIG_AUX_DIR([build-aux])

# ================================================
# Init automake
# ================================================
AM_INIT_AUTOMAKE([-Wall -Werror foreign])


# ================================================
# Checks for programs.
# ================================================
AC_PROG_CC
#PKG_PROG_PKG_CONFIG([0.29])


# ================================================
# Checks for libraries.
# ================================================
PKG_CHECK_MODULES([GTK4], [gtk4], [], [])


# ================================================
# Checks for header files.
# ================================================

# ================================================
# Checks for typedefs, structures, and compiler characteristics.c
# ================================================


# ================================================
# Checks for library functions.
# ================================================


# ================================================
# Output
# ================================================
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
